--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,3 @@
-/* .bar{
-    background-color: rgb(0, 0, 0, .8);
-    height: 30px;
-    width: 50vw;
-} */
 *{
   
     font-family: 'Verdana', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
@@ -12,28 +7,25 @@ body{
     margin: 0;
 }
 .bar-and-logo {
-    display: block;
+    display: flex;
     background-color: rgb(0, 0, 0, .7);
     height: 50px;
-    width: 100%;
-    position: relative;
-    text-align: center;
     font-size: x-large;
+   
 }
 
 .logo {
-    position: relative;
-    left: 20rem;
-    bottom: 4.5rem;
     border: 2px solid;
-    display: inline-block;
+    align-self: center;
     background-color: black;
-    width: 5.5rem;
+    width: 7rem;
+    height: 7rem;
+    margin-left: 5rem;
 
 }
 
 .bannerimg {
-    background-image: url(./assets/img/design1_image1.jpg);
+    background-image: url(/assets/img/design1_image1.jpg);
     height: 30vh;
     width: 100%;
     background-position-x: center;
@@ -42,21 +34,21 @@ body{
 }
 
 h1 {
-    position: relative;
     margin-left: 5%;
     font-size: 3vw;
-    position: absolute;
+    width: fit-content;
     
     background-color: rgba(255, 255, 255, 0.5);;
 }
 
 .banner {
-    display: block;
+    display: flex;
+    flex-direction: column;
     object-fit: cover;
 }
 
 .wrapper {
-    display: inline-block;
+    display: flex;
     width: 100%;
     height: 100%;
 }
@@ -65,7 +57,7 @@ h1 {
 top: 0;
 padding: 3rem 1rem;
 height: 80%;
-display: inline-block;
+display: flex;
 background-color: rgba(0, 0, 0, 0.2);
 font-size: 1.5rem;
 }
@@ -73,9 +65,10 @@ font-size: 1.5rem;
 h2 {
     margin: 0;
     color:white;
+    margin-left: 30vw;
 }
 nav a{
-    display: block;
+    display: flex;
     padding: 0 .3rem 2rem;
     border: 1px solid;
     border-color: black;
@@ -91,7 +84,6 @@ nav a:hover{
     position: absolute;
     top: 0;
     width: 100%;
-   
     object-fit: cover;
     z-index: -1;
     display: block;
@@ -102,15 +94,35 @@ article{
     color: white;
 }
 .data{
+   
     padding: 0 2rem;
-    display: inline-block;
+    
 }
 .pdata{
     padding: 0 2rem;
-    position: absolute;
     top: 40%;
     left: 10%;
+    font-size: initial;
+    margin: 2rem;
 }
 a{
     color: white;
+}
+.bold{
+    text-decoration: solid;
+}
+
+.gameinfo{
+    border:2px solid;
+    border-color: black;
+    margin: 3rem;
+    
+}
+.gameinfo td{
+    border: 2px solid;
+    margin: 40px;
+    border-color: black;
+}
+.scheduledata th{
+    text-align: start;
 }
